--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 4.0)  
-project(password_manager)
+project(password_manager LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-include_directories(include)
+find_package(Catch2 3 REQUIRED) # FOR TESTING
 set(SOURCES
-    main.cpp
     src/password_generator.cpp
     src/input_validator.cpp
 )
@@ -14,11 +13,35 @@ set(HEADERS
     include/password_generator.hpp
     include/input_validator.hpp
 )
+set(TESTS
+    tests/test.cpp
+)
 
-# Create executable FIRST before setting properties
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+# MAKING STATIC LIBRARY NAMED AS core 
+add_library(core STATIC ${SOURCES} ${HEADERS})
+target_include_directories(core PUBLIC include)
 
-# Now set target-specific properties AFTER creating the target
+# MAKING MAIN EXECUTABLE 
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE core)
+
+
+###########  TESTING   #################
+# These tests can use the Catch2-provided main
+add_executable(tests ${TESTS})
+target_link_libraries(tests PRIVATE core Catch2::Catch2WithMain)
+
+
+# These tests need their own main
+#add_executable(custom-main-tests test.cpp test-main.cpp)
+#target_link_libraries(custom-main-tests PRIVATE Catch2::Catch2)
+
+include(CTest)
+include(Catch)
+catch_discover_tests(tests)
+
+########################################################
+
 if(MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE 
         /W4     # High warning level
@@ -34,4 +57,3 @@ else()
         -Werror  # Treat warnings as errors
     )
 endif()
-
