Password -> [key, salt] and [Password, salt] -> key ||| Functions implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(password_manager LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Strict warnings
+# Strict warning function
 function(apply_warnings target)
     if (MSVC)
         target_compile_options(${target} PRIVATE /W4 /WX /permissive-)
@@ -14,44 +14,49 @@ function(apply_warnings target)
     endif()
 endfunction()
 
-# Include directory
-include_directories(include)
-
-# ========== Source Files ==========
+# ================== Source & Header Files ==================
 set(SOURCES
     src/password_generator.cpp
     src/file_handler.cpp
     src/helper.cpp
+    src/enc_dec.cpp
 )
 
 set(HEADERS
     include/password_generator.hpp
     include/file_handler.hpp
     include/helper.hpp
+    include/enc_dec.hpp
 )
 
-# ========== Core Static Library ==========
+# ================== Core Static Library ==================
 add_library(core_lib STATIC ${SOURCES} ${HEADERS})
 target_include_directories(core_lib PUBLIC include)
+
+# Link Crypto++ manually
+find_library(CRYPTOPP_LIB NAMES cryptopp REQUIRED)
+target_link_libraries(core_lib PUBLIC ${CRYPTOPP_LIB})
+
 apply_warnings(core_lib)
 
-# ========== Main Executable ==========
+# ================== Main Executable ==================
 file(GENERATE OUTPUT "${CMAKE_BINARY_DIR}/data/password.csv" CONTENT "")
 add_executable(password_manager main.cpp)
 target_link_libraries(password_manager PRIVATE core_lib)
 apply_warnings(password_manager)
 
-# ========== Testing ==========
-# Requires: sudo pacman -S catch2 or manually install Catch2 v3
+# ================== Unit Tests ==================
+# Make sure Catch2 v3 is installed: sudo pacman -S catch2
 find_package(Catch2 3 REQUIRED)
-file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/data")
 
-# Generate the test CSV file
+file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/data")
 file(GENERATE OUTPUT "${CMAKE_BINARY_DIR}/data/test_password.csv" CONTENT "")
+
 set(TEST_SOURCES
     tests/password_generator.cpp
     tests/file_handler.cpp
     tests/helper.cpp
+    tests/enc_dec.cpp
 )
 
 add_executable(tests ${TEST_SOURCES})
@@ -61,3 +66,8 @@ apply_warnings(tests)
 include(CTest)
 include(Catch)
 catch_discover_tests(tests)
+
+# ================== Optional: Install Rules ==================
+# install(TARGETS password_manager RUNTIME DESTINATION bin)
+# install(TARGETS core_lib ARCHIVE DESTINATION lib)
+# install(DIRECTORY include/ DESTINATION include)
