--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,19 @@
 cmake_minimum_required(VERSION 3.16)
-project(password_manager LANGUAGES CXX)
+project(passman LANGUAGES CXX)
 
 # -------------------- C++ Standard --------------------
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Enable Qt's automatic MOC, UIC, and RCC for all targets
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
+
+# -------------------- Dependencies --------------------
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
+find_package(nlohmann_json REQUIRED)
+find_package(Catch2 3 REQUIRED)
 
 # -------------------- Strict Warnings --------------------
 function(apply_warnings target)
@@ -14,8 +24,8 @@ function(apply_warnings target)
     endif()
 endfunction()
 
-# -------------------- Source & Header Files --------------------
-set(SOURCES
+# -------------------- Core Library --------------------
+set(CORE_SOURCES
     src/password_generator.cpp
     src/file_handler.cpp
     src/helper.cpp
@@ -23,7 +33,7 @@ set(SOURCES
     src/data_handler.cpp
 )
 
-set(HEADERS
+set(CORE_HEADERS
     include/password_generator.hpp
     include/file_handler.hpp
     include/helper.hpp
@@ -31,29 +41,35 @@ set(HEADERS
     include/data_handler.hpp
 )
 
-# -------------------- Core Static Library --------------------
-add_library(core_lib STATIC ${SOURCES} ${HEADERS})
+add_library(core_lib STATIC ${CORE_SOURCES} ${CORE_HEADERS})
 target_include_directories(core_lib PUBLIC include)
 
-# -------------------- Find & Link Dependencies --------------------
-# Crypto++
+# Find Crypto++ manually (installed system-wide)
 find_library(CRYPTOPP_LIB NAMES cryptopp REQUIRED)
-target_link_libraries(core_lib PUBLIC ${CRYPTOPP_LIB})
 
-# nlohmann-json (header-only)
-find_package(nlohmann_json REQUIRED)
-target_link_libraries(core_lib PUBLIC nlohmann_json::nlohmann_json)
+target_link_libraries(core_lib
+    PUBLIC
+        ${CRYPTOPP_LIB}
+        nlohmann_json::nlohmann_json
+        Qt6::Widgets
+        Qt6::Core               # core_lib uses Qt types
+)
 
 apply_warnings(core_lib)
 
-# -------------------- Main Executable --------------------
-add_executable(password_manager main.cpp)
-target_link_libraries(password_manager PRIVATE core_lib)
-apply_warnings(password_manager)
+# -------------------- Main Executable (GUI) --------------------
+add_executable(${PROJECT_NAME} main.cpp)
+
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+        core_lib
+        Qt6::Core
+        Qt6::Widgets
+)
+
+apply_warnings(${PROJECT_NAME})
 
 # -------------------- Unit Tests --------------------
-find_package(Catch2 3 REQUIRED)
-
 set(TEST_SOURCES
     tests/password_generator.cpp
     tests/file_handler.cpp
@@ -63,9 +79,18 @@ set(TEST_SOURCES
 )
 
 add_executable(tests ${TEST_SOURCES})
-target_link_libraries(tests PRIVATE core_lib Catch2::Catch2WithMain)
+
+target_link_libraries(tests
+    PRIVATE
+        core_lib
+        Catch2::Catch2WithMain
+)
+
 apply_warnings(tests)
 
 include(CTest)
 include(Catch)
 catch_discover_tests(tests)
+
+# -------------------- Installation (Optional) --------------------
+# install(TARGETS ${PROJECT_NAME} core_lib)
