--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,6 @@ project(passman LANGUAGES CXX)
 # -------------------- C++ Standard --------------------
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 # Enable Qt's automatic MOC, UIC, and RCC for all targets
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
@@ -14,7 +13,7 @@ set(CMAKE_AUTORCC ON)
 find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
 find_package(nlohmann_json REQUIRED)
 find_package(Catch2 3 REQUIRED)
-
+find_library(CRYPTOPP_LIB NAMES cryptopp REQUIRED)
 # -------------------- Strict Warnings --------------------
 function(apply_warnings target)
     if (MSVC)
@@ -26,48 +25,63 @@ endfunction()
 
 # -------------------- Core Library --------------------
 set(CORE_SOURCES
-    src/password_generator.cpp
-    src/file_handler.cpp
-    src/helper.cpp
-    src/enc_dec.cpp
-    src/data_handler.cpp
+    src/core/password_generator.cpp
+    src/core/file_handler.cpp
+    src/core/helper.cpp
+    src/core/enc_dec.cpp
+    src/core/data_handler.cpp
 )
 
 set(CORE_HEADERS
-    include/password_generator.hpp
-    include/file_handler.hpp
-    include/helper.hpp
-    include/enc_dec.hpp
-    include/data_handler.hpp
+    include/core/password_generator.hpp
+    include/core/file_handler.hpp
+    include/core/helper.hpp
+    include/core/enc_dec.hpp
+    include/core/data_handler.hpp
 )
 
 add_library(core_lib STATIC ${CORE_SOURCES} ${CORE_HEADERS})
 target_include_directories(core_lib PUBLIC include)
 
-# Find Crypto++ manually (installed system-wide)
-find_library(CRYPTOPP_LIB NAMES cryptopp REQUIRED)
 
 target_link_libraries(core_lib
     PUBLIC
-        ${CRYPTOPP_LIB}
         nlohmann_json::nlohmann_json
-        Qt6::Widgets
-        Qt6::Core               # core_lib uses Qt types
+    PRIVATE
+        ${CRYPTOPP_LIB}
 )
 
-apply_warnings(core_lib)
+# apply_warnings(core_lib)
+
+# -------------------- GUI Library --------------------
+set(GUI_SOURCES
+    src/gui/test_window.cpp
+    src/gui/test_window.ui
+)
+
+set(GUI_HEADERS
+    include/gui/test_window.hpp
+)
+add_library(gui_lib STATIC ${GUI_SOURCES} ${GUI_HEADERS})
+target_include_directories(gui_lib PUBLIC include)
+target_link_libraries(gui_lib
+    PUBLIC
+        Qt6::Core
+        Qt6::Widgets
+        core_lib
+)
+
+# apply_warnings(gui_lib)
 
 # -------------------- Main Executable (GUI) --------------------
 add_executable(${PROJECT_NAME} main.cpp)
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
-        core_lib
-        Qt6::Core
-        Qt6::Widgets
+        gui_lib
 )
 
-apply_warnings(${PROJECT_NAME})
+# apply_warnings(${PROJECT_NAME})
 
 # -------------------- Unit Tests --------------------
 set(TEST_SOURCES
@@ -86,11 +100,8 @@ target_link_libraries(tests
         Catch2::Catch2WithMain
 )
 
-apply_warnings(tests)
+# apply_warnings(tests)
 
 include(CTest)
 include(Catch)
 catch_discover_tests(tests)
-
-# -------------------- Installation (Optional) --------------------
-# install(TARGETS ${PROJECT_NAME} core_lib)
